# HubsBot

./: README.md  pyproject.toml
.github/workflows/: sphinx-docs.yml
docs/: requirements.txt  requrements.txt
docs/source/: conf.py  index.rst
examples/: conference_bot.py  echo_bot.py
hubsbot/bot/: bot.py
hubsbot/consumer/: __init__.py  text_consumer.py
hubsbot/consumer/abstract/: __init__.py  factory.py  text_consumer.py  voice_consumer.py
hubsbot/consumer/aiortc/: __init__.py  factory.py  file_text_consumer.py  media_recorder_adapter.py
hubsbot/consumer/processed/: phrases_consumer.py
hubsbot/consumer/processed/openai/: __init__.py  gpt_consumer.py
hubsbot/consumer/processed/vosk/: __init__.py  vosk_consumer.py
hubsbot/peer/: peer.py
notebooks/: test_bot.ipynb
