[project]
name = "HubsBot"
description = "Mozilla Hubs client for AI-powered bots creation (support voice chatting)"
version = "0.0.0"
requires-python = "==3.10"
license = {text="AGPL-3.0"}
keywords = ["mozilla-hubs"]
authors = [
    { name = "Andrew Aralov", email = "andrew-aralov@yandex.ru" },
    { name = "Iskander Gafarov" }
]
dependencies = [
    "Cryptography<=38.0.0",
    "aioprocessing==2.0.1",
    "av==8.1.0",
    "gql==3.4.1",
    "matplotlib==3.8.0",
    "numpy==1.26.2",
    "pydub==0.25.1",
    "pymediasoup==0.2.5",
    "Requests==2.31.0",
    "transforms3d==0.4.1",
    "websockets==11.0.3",
    "openai==0.28.1"
]

[options]
package_dir = "src"

[options.packages.find]
where = "src"