[project]
name = "HubsBot"
description = "Mozilla Hubs client for AI-powered bots creation (support voice chatting)"
version = "0.0.0"
requires-python = ">=3.10,<3.11"
license = {text="AGPL-3.0"}
keywords = ["mozilla-hubs"]
authors = [
    { name = "Andrew Aralov", email = "andrew-aralov@yandex.ru" },
    { name = "Iskander Gafarov" }
]
dependencies = [
    "Cryptography<=38.0.0",
    "aioprocessing",
    "av",
    "gql",
    "matplotlib",
    "numpy",
    "pydub",
    "pymediasoup",
    "Requests",
    "transforms3d",
    "websockets",
    "openai==0.28.1"
]

[options]
package_dir = "src"

[options.packages.find]
where = "src"